force-app/main/default/objects/Contracted_Price__c/fields/Contracted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The original price for a product.</description>
    <label>Contracted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>