force-app/main/default/objects/Contracted_Price__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field is utilized to display the description for the locations on the review reservation screen.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>