force-app/main/default/objects/Contracted_Price__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>This field is used to associate the payer with contracted price.</description>
    <label>Payor</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Contracted Price</relationshipLabel>
    <relationshipName>Contracted_Price</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>