force-app/main/default/objects/Contracted_Price__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <description>This field is used to associate the procedure code with contracted price.</description>
    <label>Procedure</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Procedure</value>
        </filterItems>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Inventory</value>
        </filterItems>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Lab Test</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Contracted Price</relationshipLabel>
    <relationshipName>Contracted_Price</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>