force-app/main/default/objects/Contracted_Price__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Units for which the price is defined.</description>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>